--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
     "express": "^4.17.1",
+    "passport-github": "^1.1.0",
     "typescript": "^4.0.3"
   },
   "scripts": {
